Initial Page Under Construction

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">  
     <link rel="stylesheet" type="text/css" href="rio-spots.css"></link>
   </head>
-	  <body>
+	  <body background="sky2.png">
 		<!-- Scripts linking to the jQuery Library -->
 	    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 		<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<!-- Main JavaScript file -->
-		<script type="text/javascript" src="finalConstruct.js"></script>	  
+		<script type="text/javascript" src="construct.js"></script>	  
 	    <!-- Map JavaScript File-->
 	    <script type="text/javascript" src="map.js"></script>
 	    <!-- This script tag is provided by the Google Maps API to enable the Google Maps API -->
